Fixes code box overflow

--- a/assets/css/marchelbling.css
+++ b/assets/css/marchelbling.css
@@ -257,20 +257,11 @@ article img {
   margin-bottom: 1em;
   padding: 4px;
   border: 0px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-.highlight pre {
-/*  overflow: scroll;*/
-  overflow-x: auto;
-  word-wrap: normal;
-}
-
-.highlight {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
+  overflow-x: scroll;
 }
 
 .deets {
@@ -331,7 +322,7 @@ label.margin-toggle:not(.sidenote-number) {
 .sidenote-number:after, .sidenote:before {
   content: counter(sidenote-counter) " ";
   font-family: et-bembo-roman-old-style;
-  color: #303840; //added color
+  color: #303840;
   position: relative;
   vertical-align: baseline;
 }
